--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Twitter Card -->
+  <meta content="summary_large_image" name="twitter:card" />
+  <meta content="Sleepcalc" name="twitter:title" />
+  <meta
+      content="/embed.png"
+      name="twitter:image"
+  />
+
   <title>Sleep Calculator</title>
 </head>
 
