Add generate meta

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- General Meta -->
+  <meta content="Sleep, web" name="keywords" />
+  <meta
+      data-react-helmet="true"
+      content="Sleep calculator is used to calculate sleep cycles."
+      name="description"
+  />
+  <meta content="Michaluser" name="author" />
+
   <!-- Twitter Card -->
   <meta content="summary_large_image" name="twitter:card" />
   <meta content="Sleepcalc" name="twitter:title" />
