Add opengraph, update tags

--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- General Meta -->
-  <meta content="Sleep, web" name="keywords" />
-  <meta
-      data-react-helmet="true"
-      content="Sleep calculator is used to calculate sleep cycles."
-      name="description"
-  />
+  <meta name="keywords" content="Sleep, web" />
+  <meta name="description" content="Optimize sleep"/>
   <meta content="Michaluser" name="author" />
 
+  <!-- Open Graph -->
+  <meta property="og:title" content="Sleep Calculator" />
+  <meta property="og:description" content="Optimize sleep" />
+  <meta property="og:image" content="/embed.png" />
+  <meta property="og:url" content="https://sleepcalc.vercel.app" />
+  <meta property="og:type" content="website" />
+
   <!-- Twitter Card -->
+  <meta name="twitter:title" content="Sleep Calc" />
+  <meta name="twitter:image" content="/embed.png" />
   <meta content="summary_large_image" name="twitter:card" />
-  <meta content="Sleepcalc" name="twitter:title" />
-  <meta
-      content="/embed.png"
-      name="twitter:image"
-  />
 
   <title>Sleep Calculator</title>
 </head>
